# takopi-acp-engine

./: .gitignore  pyproject.toml
src/takopi_acp_engine/: __init__.py  backend.py  runner.py  settings.py
tests/: test_acp_translate.py
